crates/oxc_css_parser/tests/error/value/calc/trailing-operator.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: component value is expected
  ┌─ trailing-operator.css:1:17
  │
1 │ a {b: calc(1px *)}
  │                 ^


